--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     }
 
     body {
-      background-image: url('icon0.jpg');
-      color: white;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
+    min-height: 100vh;
+    min-width: 100vw;
+    position: relative;
+
+   /* Background Image */
+    background-image: url('logo.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: #222222;
+   }
 
     @font-face {
       font-family: 'logging';
