Enhance body styles in cache.html
Updated body styles for improved layout and background.

--- a/cache.html
+++ b/cache.html
@@ -2,7 +2,19 @@
 <head>
 <title>Abo Fahad - PS4 9.00 GoldHEN</title>
 <style>
-body{background:url('icon0.png'); linear-gradient(to bottom right, #063FAB, #01258A);color:rgb(0, 0, 0);font-size:28px;text-align:center;margin:0;overflow:hidden;}
+body {
+    min-height: 100vh;
+    min-width: 100vw;
+    position: relative;
+
+   /* Background Image */
+    background-image: url('logo.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: #222222;
+   }
 .info{position:relative;top:39%;}
 </style>
 <script>
