--- a/cache.html
+++ b/cache.html
@@ -8,7 +8,7 @@ body {
     position: relative;
 
    /* Background Image */
-    background-image: url('logo.png');
+    background-image: url('icon0.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
