Change background image from logo.png to icon0.jpg

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     position: relative;
 
    /* Background Image */
-    background-image: url('logo.png');
+    background-image: url('icon0.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
