--- a/index.html
+++ b/index.html
@@ -29,19 +29,23 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       padding: 0;
     }
 
-    body {
-    min-height: 100vh;
-    min-width: 100vw;
-    position: relative;
+   body {
+  min-height: 100vh;
+  min-width: 100vw;
 
-   /* Background Image */
-    background-image: url('icon0.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-color: #222222;
-   }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* Background Image */
+  background-image: url('icon0.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #222222;
+}
+
 
     @font-face {
       font-family: 'logging';
@@ -49,15 +53,21 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     }
 
     .card {
-      background: rgba(115, 116, 160, 0.5);
-      backdrop-filter: blur(10px);
-      padding: 40px;
-      border-radius: 20px;
-      text-align: center;
-      width: 100%;
-      max-width: 700px;
-      box-shadow: 8px 10px 2px rgba(0, 0, 0, 0.178);
-    }
+  background: linear-gradient(
+  135deg,
+  rgba(255, 215, 0, 0.35),
+  rgba(184, 134, 11, 0.25)
+);
+
+  backdrop-filter: blur(12px);
+  padding: 30px;
+  border-radius: 20px;
+  text-align: center;
+  width: 90%;
+  max-width: 550px;   /* كان 700 */
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+}
+
 
     h1 {
       font-size: 32px;
@@ -65,16 +75,17 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     }
 
     #console {
-      font-family: 'logging', monospace;
-      font-size: 18px;
-      text-align: left;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      border-radius: 10px;
-      white-space: pre-wrap;
-      height: 300px;
-      overflow-y: auto;
-    }
+  font-family: 'logging', monospace;
+  font-size: 16px; /* أصغر شوي */
+  text-align: left;
+  background: rgba(0, 0, 0, 0.75);
+  padding: 15px;
+  border-radius: 12px;
+  white-space: pre-wrap;
+  height: 250px;   /* كان 300 */
+  overflow-y: auto;
+}
+
   </style>
 </head>
 <body>
